--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,15 +1,21 @@
-<footer >
-    <div class="f-info">
-        <div class="f-info-socials">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-threads"></i>
-        </div>
-
-        <div class="f-info-brand"> &copy; Saadhan Private Limited</div>
-        <div class="f-info-links">
-            <a href="/privacy"> Privacy</a>
-            <a href="/terms">Terms</a>
-        </div>
+<footer>
+  <div class="f-info">
+    <div class="f-info-brand">
+      <i class="fa-solid fa-car-side me-2"></i> Saadhan
     </div>
+    <div class="f-info-links">
+      <a href="/privacy-policy">Privacy Policy</a>
+      <a href="/terms-and-conditions">Terms and Conditions</a>
+      <a href="/about">About</a>
+    </div>
+    <div class="f-info-socials">
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-linkedin-in"></i>
+    </div>
+    <div style="width: 100%; text-align: center; margin-top: 1rem; opacity: 0.8; font-size: 0.9rem;">
+      &copy; <%= new Date().getFullYear() %> Saadhan Private Limited. All rights reserved.
+    </div>
+  </div>
 </footer>
