--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,36 +1,37 @@
 <% layout("/layouts/boilerplate") %>
 
 <div class="row mt-3">
-    
   <div class="col-6 offset-3">
-    <h1>Login</h1>
-    <form action="/login" 
-    method="POST"
-    class="needs-validation"
-    novalidate>
+    <h1 style="text-align: center;">Login</h1>
+    <p style="color: var(--text-light); margin-bottom: 2rem; text-align: center;">Login to your account to continue</p>
+    
+    <form action="/login" method="POST" class="needs-validation" novalidate>
+      <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input type="text" id="username" class="form-control" name="username" 
+               placeholder="Enter your username" required>
+      </div>
 
-    <div class="mb-3">
-    <label for="username"
-     class="form-label"><b>Username</b></label>
-    <input type="text" id="username"
-     class="form-control"
-      name="username" 
-    placeholder="Enter your username"  
-    required/>
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" id="password" class="form-control" name="password" 
+               placeholder="Enter your password" required>
+      </div>
 
-    <label for="password" class="form-label"><b>Password</b></label>
-    <input type="password" id="password"
-    class="form-control"
-    name="password" 
-    laceholder="Enter your password"  
-     required/>
-     <br>
-     <button class="btn btn-success"> Login </button>
-
-  
-    </div>
-
- 
-
+      <div class="d-grid gap-2">
+        <button type="submit" class="btn btn-success">
+          <i class="fa-solid fa-sign-in-alt me-2"></i> Login
+        </button>
+      </div>
+      
+      <div class="text-center mt-3">
+        <p style="color: var(--text-light);">
+          Don't have an account? 
+          <a href="/signup" style="color: var(--primary-color); text-decoration: none; font-weight: 600;">
+            Sign up here
+          </a>
+        </p>
+      </div>
     </form>
-    </div></div>
+  </div>
+</div>
