--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
   <div class="f-info">
     <div class="f-info-brand">
-      <i class="fa-solid fa-car-side me-2"></i> Saadhan
+      Saadhan<i class="fa-solid fa-car-side me-2"></i> 
     </div>
     <div class="f-info-links">
       <a href="/privacy-policy">Privacy Policy</a>
@@ -12,7 +12,7 @@
       <i class="fa-brands fa-facebook-f"></i>
       <i class="fa-brands fa-instagram"></i>
       <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-linkedin-in"></i>
+      <a href="https://www.linkedin.com/in/b-manisha-develop/"><i class="fa-brands fa-linkedin-in"></i></a>
     </div>
     <div style="width: 100%; text-align: center; margin-top: 1rem; opacity: 0.8; font-size: 0.9rem;">
       &copy; <%= new Date().getFullYear() %> Saadhan Private Limited. All rights reserved.
