--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -29,7 +29,7 @@
       <!-- Right-aligned Nav Links -->
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">
-          <i class="fa-solid fa-plus me-1"></i> Create Listing
+          <i class="fa-solid fa-plus me-1"></i> Become a Host
         </a>
         <% if(!currUser) { %>
           <a class="nav-link" href="/signup">
