--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -130,11 +130,11 @@
     <% } %>
 
     <!-- Map Section -->
-    <div class="mt-4">
+    <!-- <div class="mt-4">
       <h3 style="font-weight: 700; margin-bottom: 1rem;">Location</h3>
       <div id="map"></div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- <script src="/js/map.js"></script> -->
